# NiftyQuant

./: .gitignore  pyproject.toml  requirements.txt
nifty_quant/: __init__.py  dotenv.py  log.py  repro.py
nifty_quant/analytics/: __init__.py  black_scholes.py  indicators.py  options.py  stat_tests.py
nifty_quant/backtest/: __init__.py  broker.py  engine.py  filters.py  incremental.py  instrument.py  intents.py  journal.py  metrics.py  portfolio.py  risk.py  signals.py  strategy.py
scripts/: check_totp.py  collect_angel_history.py  collect_daily.ps1  collect_market_data.py  collect_option_chain.py  daily_research.py  explore_today.py  gap_study.py  gap_vol_control.py  intraday_autocorr.py  option_quality_report.py  regime_alpha.py  regime_strategy.py  research_filters.py  run_all_strategies.py  run_backtest.py  run_benchmarks.py  run_paper.py  run_zoo.py  rv_persistence.py  validate_data.py  vol_asymmetry.py  vol_clock.py  vol_decomp.py
tests/: helpers.py  test_angel_option_chain.py  test_angelone_provider.py  test_backtest_engine.py  test_benchmarks.py  test_black_scholes.py  test_broker_and_risk.py  test_dotenv.py  test_feature_strategy_backtest.py  test_features.py  test_filters.py  test_groww_provider.py  test_indicators.py  test_log.py  test_mean_reversion.py  test_metrics.py  test_options.py  test_paper_feed.py  test_pipeline_ideas.py  test_portfolio.py  test_quality.py  test_replay_and_collector.py  test_repro_lineage.py  test_research.py  test_session_and_journal.py  test_stat_tests.py  test_storage_parquet.py  test_validation.py
(+59 files in other folders)
